--- a/board/templates/boards/board_detail.html
+++ b/board/templates/boards/board_detail.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div
- x-data="boardDetailPage({
+  x-data="boardDetailPage({
     moveUrl: '{% url 'task_move' %}',
     listMoveUrl: '{% url 'list_reorder' board.id %}'
   })"
@@ -71,7 +71,7 @@
 
   <button
     @click="addMemberOpen = true"
-    class="w-8 h-8 rounded-full bg-gray-200 hover:bg-gray-300 text-gray-600 border-2 border-white flex items-center justify-center text-xs font-bold ml-2 transition z-0"
+    class="w-8 h-8 rounded-full bg-gray-200 hover:bg-gray-300 text-gray-600 border-2 border-white flex items-center justify-center text-xs font-bold ml-2 transition relative z-10"
     title="Invite Member"
   >
     +
@@ -125,7 +125,7 @@
               {{ lst.title }}
             </h2>
             
-            <div class="relative" x-data="{ openMenu: false }">
+            <div class="relative">
                 <button class="text-gray-400 hover:text-gray-700 p-1 rounded hover:bg-gray-200 transition-colors">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                         <path d="M6 10a2 2 0 11-4 0 2 2 0 014 0zM12 10a2 2 0 11-4 0 2 2 0 014 0zM16 12a2 2 0 100-4 2 2 0 000 4z" />
@@ -234,11 +234,13 @@
     </div>
   </main>
 
-  {# POPUP ต่าง ๆ (Include เดิม) #}
+  {# POPUP ต่าง ๆ #}
   {% include "boards/components/popup_task_form.html" %}
   {% include "boards/components/popup_list_form.html" %}
   {% include "boards/components/popup_list_delete.html" %}
   {% include "boards/components/popup_add_member.html" %}
+  
+  
 
 </div>
 {% endblock %}
