--- a/templates/base.html
+++ b/templates/base.html
@@ -22,26 +22,25 @@
     {% tailwind_css %}
   </head>
 
-  <body class="bg-gray-100 min-h-screen">
-    <div class="flex flex-col min-h-screen">
-      {# layout หลักของทุกหน้า (navbar + sidebar + main) #} 
+ <body class="bg-gray-100 min-h-screen">
+    <div class="flex flex-col min-h-screen pt-14"> 
       {% block layout %}
       
         {% block navbar %} 
           {% include "components/navbar.html" %} 
         {% endblock %}
 
-        <div class="flex flex-1">
-          {% block sidebar %} 
+        <div class="flex flex-1 relative"> {% block sidebar %} 
             {% include "components/sidebar.html" %} 
           {% endblock %}
 
-          <main class="flex-1">
+          <main class="flex-1 w-full max-w-full relative">
             {% block content %}{% endblock %}
           </main>
         </div>
 
       {% endblock %}
     </div>
-  </body>
+</body>
+</html>
 </html>
